public/style.css
/* note: width properties are hard-coded; consider changing them to a "%" */

body {
  margin: 0;
}

h1 {
  font-family: Georgia, 'Times New Roman', Times, serif;
  border-bottom: solid 3px;
  font-size: 28px;
  padding-left: 160px;
  /* margin: 3px; */
}

p {
  padding: 0;
  margin: 3px;
  text-transform: uppercase;
}

input[type=text] {
  width: 20px;
  border: solid 1px gray;
  border-radius: 5px;
  padding: 4px 10px 10px 20px;
  padding-left: 10px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-right: 10px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 15px;
  font-weight: bold;
}

select {
  width: 140px;
  height: 30px;
  border-radius: 8px;
  padding: 5px 10px 10px 15px;
  margin-left: 50px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 16px;
  text-align-last:center;

}

label {
  padding: 7px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 17px;
  color: lightgray;
  text-transform: uppercase;
}

a {
  color: white;
  cursor: pointer;
  text-decoration: none;
}

.about {
  width: 240px;
  border-bottom: solid 2px black;
  margin-top: 20px;
  margin-left: 17px;
}

.about-text {
  font-weight: bold;
  font-size: 12px;
  margin-left: 250px;
  padding-top: 3px;
}

.about-link-text {
  color: black;
}

.play-button {
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 25px;
  padding-right: 25px;
  border-radius: 7px;
  background-color: black;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
  font-size: 13px;
  color: white;
  cursor: pointer;
  margin-top: 10px;
  margin-left: 75px;
}

button:focus {outline:0;}
input:focus {outline:0;}
audio:focus {outline:0;}

.form-player {
  font-family: Arial, Helvetica, sans-serif
}

.form {
  margin-left: 115px;
}

.grid {
  max-width: 450px;
  display: grid;
  grid-template-columns: 450px;
  grid-template-rows: 100px;
  margin: 0px auto;
  padding-top: 35px;
}

.musicPlayer {
  margin-top: 30px;
  margin-left: 90px;
}

.image-question {
  padding-left: 102px;
}

.image-vinyl {
  float: left;
  padding-top: 15px;
  padding-left: 25px;
}

.info-text {
  color: black;
  font-family: Georgia, 'Times New Roman', Times, serif;
  text-transform: none;

}

.info-text a {
  color: black;
  font-weight: 600;
}

.info-text p {
  text-transform: none;
}

 .metaData {
  border: solid 2px;
  border-radius: 10px;
  width: 260px;
  height: 80px;
  margin-left: 110px;
  margin-bottom: 25px;
  padding-top: 20px;
  background-color: black;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 17px;
  color: white;
  text-align: center;
  vertical-align: center;

}


.shareButtons {
  padding-left: 90px;
}

.skip-button {
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 25px;
  padding-right: 25px;
  border-radius: 7px;
  background-color: black;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
  font-size: 13px;
  color: white;
  cursor: pointer;
  margin-left: 100px;
  margin-top: 5px;
}

.return-button {
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 20px;
  padding-right: 20px;
  border-radius: 7px;
  background-color: black;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
  font-size: 13px;
  color: white;
  cursor: pointer;
  margin-left: 175px;
  margin-top: 10px;
  margin-bottom: 10px;
}

#yearForm {
  margin-left: 70px;
  font-weight: bold;
}

.year {
  margin-left: 4px;
}

.how-what-who {
  border-style: solid;
  background: black;
  color: white;
  padding: 10px;
  text-transform: lowercase;
  text-align: center;
  font-size: 22px;
  width: 95%;
  text-align: center;
  font-family: Georgia, 'Times New Roman', Times, serif;
  margin-bottom: 10px;
}

#metadata {
  font-family: Georgia, 'Times New Roman', Times, serif
}




/* sharing buttons css */
/* credit: https://sharingbuttons.io/ */
.resp-sharing-button__link,
.resp-sharing-button__icon {
  display: inline-block
}

.resp-sharing-button__link {
  text-decoration: none;
  color: #fff;
  margin: 0.5em
}

.resp-sharing-button {
  border-radius: 5px;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif
}

.resp-sharing-button__icon svg {
  width: 1em;
  height: 1em;
  margin-right: 0.4em;
  vertical-align: top
}

.resp-sharing-button--small svg {
  margin: 0;
  vertical-align: middle
}

/* Non solid icons get a stroke */
.resp-sharing-button__icon {
  stroke: #fff;
  fill: none
}

/* Solid icons get a fill */
.resp-sharing-button__icon--solid,
.resp-sharing-button__icon--solidcircle {
  fill: #fff;
  stroke: none
}

.resp-sharing-button--twitter {
  background-color: #55acee
}

.resp-sharing-button--twitter:hover {
  background-color: #2795e9
}

.resp-sharing-button--pinterest {
  background-color: #bd081c
}

.resp-sharing-button--pinterest:hover {
  background-color: #8c0615
}

.resp-sharing-button--facebook {
  background-color: #3b5998
}

.resp-sharing-button--facebook:hover {
  background-color: #2d4373
}

.resp-sharing-button--tumblr {
  background-color: #35465C
}

.resp-sharing-button--tumblr:hover {
  background-color: #222d3c
}

.resp-sharing-button--reddit {
  background-color: #ff4301
}

.resp-sharing-button--reddit:hover {
  background-color: #3a80c1
}

.resp-sharing-button--google {
  background-color: #dd4b39
}

.resp-sharing-button--google:hover {
  background-color: #c23321
}

.resp-sharing-button--linkedin {
  background-color: #0077b5
}

.resp-sharing-button--linkedin:hover {
  background-color: #046293
}

.resp-sharing-button--email {
  background-color: #777
}

.resp-sharing-button--email:hover {
  background-color: #5e5e5e
}

.resp-sharing-button--xing {
  background-color: #1a7576
}

.resp-sharing-button--xing:hover {
  background-color: #114c4c
}

.resp-sharing-button--whatsapp {
  background-color: #25D366
}

.resp-sharing-button--whatsapp:hover {
  background-color: #1da851
}

.resp-sharing-button--hackernews {
background-color: #FF6600
}
.resp-sharing-button--hackernews:hover, .resp-sharing-button--hackernews:focus {   background-color: #FB6200 }

.resp-sharing-button--vk {
  background-color: #507299
}

.resp-sharing-button--vk:hover {
  background-color: #43648c
}

.resp-sharing-button--facebook {
  background-color: #3b5998;
  border-color: #3b5998;
}

.resp-sharing-button--facebook:hover,
.resp-sharing-button--facebook:active {
  background-color: #2d4373;
  border-color: #2d4373;
}

.resp-sharing-button--twitter {
  background-color: #55acee;
  border-color: #55acee;
}

.resp-sharing-button--twitter:hover,
.resp-sharing-button--twitter:active {
  background-color: #2795e9;
  border-color: #2795e9;
}

.resp-sharing-button--google {
  background-color: #dd4b39;
  border-color: #dd4b39;
}

.resp-sharing-button--google:hover,
.resp-sharing-button--google:active {
  background-color: #c23321;
  border-color: #c23321;
}

.resp-sharing-button--tumblr {
  background-color: #35465C;
  border-color: #35465C;
}

.resp-sharing-button--tumblr:hover,
.resp-sharing-button--tumblr:active {
  background-color: #222d3c;
  border-color: #222d3c;
}

.resp-sharing-button--email {
  background-color: #777777;
  border-color: #777777;
}

.resp-sharing-button--email:hover,
.resp-sharing-button--email:active {
  background-color: #5e5e5e;
  border-color: #5e5e5e;
}

.resp-sharing-button--pinterest {
  background-color: #bd081c;
  border-color: #bd081c;
}

.resp-sharing-button--pinterest:hover,
.resp-sharing-button--pinterest:active {
  background-color: #8c0615;
  border-color: #8c0615;
}

